BSPMC238-99 addition of footer

--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,5 +1,8 @@
 <!doctype html>
+
 {% load static %}
+
+
 <html lang="he">
 <head>
     <meta charset="UTF-8">
@@ -26,5 +29,11 @@
             </form>
         </div>
     </div>
+
+<footer>
+    {% include 'base/footer.html' %}
+</footer>
+
 </body>
+
 </html>
