--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,8 @@ body {
     color: var(--color-text);
 }
 
+
+
 /*==================
 Login Page
 ==================*/
@@ -85,3 +87,17 @@ Login Page
 .login-form input[type="submit"]:hover {
     background-color: #3e8e41;
 }
+
+footer {
+    width: 50%;
+    float:left;
+    text-align: center;
+    font-size: 1.2em;
+    margin-top: 0px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
