addition of footer

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,5 +13,10 @@
         {% include "navbar.html" %}
         {% block content %}
         {% endblock content %}
+
     </body>
+
+    <footer>
+        {% include 'footer.html' %}
+    </footer>
 </html>
