BSPMC238-11 Fix some bugs

--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -23,7 +23,7 @@
                 <input type="email" id="email" name="email">
 
                 <label for="password">סיסמה</label>
-                <input type="password" id="password" name="email">
+                <input type="password" id="password" name="password">
 
                 <input type="submit" value="כניסה">
             </form>
