--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 <div id="rights">
-    all rights reserved &copy; 2023
+    All rights reserved &copy; 2023
 </div>
 
 <div id="about">
-    <a href="" title="about" target="_blank">about us</a>
+    <a href="" title="about" target="_blank">About us</a>
 </div>
 
 
