--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -18,7 +18,8 @@
             DWH - Sami Shamoon's College Digital Warehouse
         </div>
         <div class="login-form">
-            <form action="">
+            <form action="" method="POST">
+                {% csrf_token %}
                 <label for="email">דואר אלקטרוני</label>
                 <input type="email" id="email" name="email">
 
