--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,13 @@
 <!--Footer-->
 {% load static %}
 
-<div id="rights">
-    All rights reserved &copy; 2023
-</div>
-
 <div id="about">
-    <a href="" title="about" target="_blank">About us</a>
+    <a href="" title="About Us">About Us</a>
 </div>
 
-
+<div class="container">
+    <script>
+            const currentYear = new Date().getFullYear();
+            document.write(`&copy; ${currentYear} DWH. All Rights Reserved.`);
+    </script>
+</div>
