fixed footer bug
fixed footer bug that that shifts a footer content to the left off the screen edge

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,7 +19,8 @@ footer {
     margin-top: 0px;
     position: absolute;
     bottom: 0;
-    transform: translateX(-50%);
+    width: 100%;
+    line-height: 25px;
 }
 
 
