BSPMC238-99 footer fixed

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <div id="about">
-    <a href="" title="About Us">About Us</a>
+    <a href="{% url 'about' %}" title="About Us">About Us</a>
 </div>
 
 <div class="container">
