--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,18 +11,20 @@ body {
     min-height: 100vh;
     font-family: 'Varela Round', sans-serif;
     color: var(--color-text);
+    height: 100%;
 }
 
 footer {
     width: 50%;
-    float:left;
+    float: left;
     text-align: center;
     font-size: 1.2em;
-    margin-top: 0px;
+    margin-top: 0;
     position: absolute;
-    bottom: 0;
+    bottom: -13%;
     left: 50%;
     transform: translateX(-50%);
+    clear: both;
 }
 
 
@@ -100,6 +102,52 @@ Login Page
     background-color: #33ccff;
 }
 
+/*==================
+NAVBAR
+==================*/
+.header {
+    height: 80px;
+    /*margin-inline-start: 135px;*/
+    background: #fff;
+    border: 1px solid #efefef;
+    box-shadow: 0px 4px 8px rgba(202, 202, 202, 0.25);
+    padding: 17px 65px 17px;
+    padding-inline-end: 20px;
+    transition: all 0.3s ease 0s;
+}
+.header a {
+    color: var(--color-text);
+}
 
+.header-main-content {
+    display: flex;
+    justify-content: space-between;
+}
 
+/*==================
+SIDE BAR
+==================*/
+.side-bar{
+    list-style-type: none;
+    box-shadow: 0px 4px 8px rgba(202, 202, 202, 0.25);
+    margin: 0;
+    padding: 0;
+    width: 15rem;
+    height: 100vh;
+    background-image: linear-gradient(to bottom right, #ff9900 0%, #ff3399 50%, #33ccff 100%);
+    float: right;
+}
+
+.side-bar a {
+    display: block;
+    padding: 8px 16px;
+    text-decoration: none;
+    height: 8rem;
+    font-size: 2em;
+}
+
+.side-bar a:hover {
+    background-color: #ff3399;
+    color: white;
+}
 
