--- a/static/css/main.css
+++ b/static/css/main.css
@@ -124,6 +124,23 @@ NAVBAR
     justify-content: space-between;
 }
 
+.navigation {
+    justify-content: space-evenly;
+    margin: 0 0 5px 0;
+    padding: 0;
+}
+
+.navigation li{
+    display: inline-block;
+    font-weight: 700;
+    font-size: 20px;
+    margin: 20px;
+}
+
+.navigation li a {
+    text-decoration: none;
+}
+
 /*==================
 SIDE BAR
 ==================*/
@@ -132,7 +149,7 @@ SIDE BAR
     box-shadow: 0px 4px 8px rgba(202, 202, 202, 0.25);
     margin: 0;
     padding: 0;
-    width: 15rem;
+    width: 12rem;
     height: 100vh;
     background-image: linear-gradient(to bottom right, #ff9900 0%, #ff3399 50%, #33ccff 100%);
     float: right;
@@ -142,12 +159,15 @@ SIDE BAR
     display: block;
     padding: 8px 16px;
     text-decoration: none;
-    height: 8rem;
-    font-size: 2em;
+    height: 4rem;
+    font-size: 1.5em;
+    font-weight: 700;
+    color: #fff;
+    float: right;
 }
 
 .side-bar a:hover {
     background-color: #ff3399;
-    color: white;
+    width: 100%;
 }
 
