BSPMC238-133 Added buttons for navigation to home page

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,17 +1,26 @@
 <ul class="side-bar">
     <li class="side-bar-link">
-        <a href="">מצלמות</a>
+        <a href="">Camera</a>
     </li>
     <li class="side-bar-link">
-        <a href="">עמודים</a>
+        <a href="">Record</a>
     </li>
     <li class="side-bar-link">
-        <a href="">חדר צילומים</a>
+        <a href="">Apple</a>
     </li>
     <li class="side-bar-link">
-        <a href="">קוקושקה</a>
+        <a href="">Tripod</a>
     </li>
     <li class="side-bar-link">
-        <a href="">משהו במצד</a>
+        <a href="">Projectors</a>
+    </li>
+    <li class="side-bar-link">
+        <a href="">Cables</a>
+    </li>
+    <li class="side-bar-link">
+        <a href="">Lights</a>
+    </li>
+    <li class="side-bar-link">
+        <a href="">Convertors</a>
     </li>
 </ul>
