--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,6 +27,10 @@ footer {
     clear: both;
 }
 
+svg {
+    margin: 0 15px 0 0;
+}
+
 
 
 /*==================
@@ -163,11 +167,47 @@ SIDE BAR
     font-size: 1.5em;
     font-weight: 700;
     color: #fff;
-    float: right;
+    float: left;
 }
 
 .side-bar a:hover {
     background-color: #ff3399;
     width: 100%;
+    float: right;
 }
 
+/*==================
+HOME PAGE
+==================*/
+
+.home-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5px;
+    row-gap: 1px;
+    height: 30em;
+    margin: 15px;
+}
+
+.home-card {
+    border-radius: 10px;
+    background-color: white;
+    margin: 15px;
+    width: 85%;
+}
+
+.home-card:hover {
+    border: 1px solid #efefef;
+    box-shadow: 0px 4px 8px rgba(202, 202, 202, 0.25);
+}
+
+.home-card a {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    width: 100%;
+    height: 100%;
+    margin: 20px;
+    color: var(--color-text);
+}
