BSPMC238-133 Fixes in the side-bar

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,26 +1,26 @@
 <ul class="side-bar">
     <li class="side-bar-link">
-        <a href="">Camera</a>
+        <a href="">מצלמות</a>
     </li>
     <li class="side-bar-link">
-        <a href="">Record</a>
+        <a href=""> מוצרי הקלטות</a>
     </li>
     <li class="side-bar-link">
-        <a href="">Apple</a>
+        <a href="">מוצרי אפאל</a>
     </li>
     <li class="side-bar-link">
-        <a href="">Tripod</a>
+        <a href="">טריפוד</a>
     </li>
     <li class="side-bar-link">
-        <a href="">Projectors</a>
+        <a href="">פרויקטורים</a>
     </li>
     <li class="side-bar-link">
-        <a href="">Cables</a>
+        <a href="">כבלים</a>
     </li>
     <li class="side-bar-link">
-        <a href="">Lights</a>
+        <a href="">מנורות</a>
     </li>
     <li class="side-bar-link">
-        <a href="">Convertors</a>
+        <a href="">מתאמים</a>
     </li>
 </ul>
