--- a/static/css/main.css
+++ b/static/css/main.css
@@ -167,7 +167,7 @@ SIDE BAR
     font-size: 1.5em;
     font-weight: 700;
     color: #fff;
-    float: left;
+    float: right;
 }
 
 .side-bar a:hover {
