BSPMC238-133 Fixes in the nav_bar, main content

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,22 +12,45 @@
         <ul class="navigation">
             <li>
                 <a href="">
-                    <svg fill="#000000" height="20px" width="20px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                     viewBox="0 0 482.568 482.568" xml:space="preserve">
-                        <g>
-                            <g>
-                                <path d="M116.993,203.218c13.4-1.8,26.8,2.8,36.3,12.3l24,24l22.7-22.6l-32.8-32.7c-5.1-5.1-5.1-13.4,0-18.5s13.4-5.1,18.5,0
-                                    l32.8,32.8l22.7-22.6l-24.1-24.1c-9.5-9.5-14.1-23-12.3-36.3c4-30.4-5.7-62.2-29-85.6c-23.8-23.8-56.4-33.4-87.3-28.8
-                                    c-4.9,0.7-6.9,6.8-3.4,10.3l30.9,30.9c14.7,14.7,14.7,38.5,0,53.1l-19,19c-14.7,14.7-38.5,14.7-53.1,0l-31-30.9
-                                    c-3.5-3.5-9.5-1.5-10.3,3.4c-4.6,30.9,5,63.5,28.8,87.3C54.793,197.518,86.593,207.218,116.993,203.218z"/>
-                                <path d="M309.193,243.918l-22.7,22.6l134.8,134.8c5.1,5.1,5.1,13.4,0,18.5s-13.4,5.1-18.5,0l-134.8-134.8l-22.7,22.6l138.9,138.9
-                                    c17.6,17.6,46.1,17.5,63.7-0.1s17.6-46.1,0.1-63.7L309.193,243.918z"/>
-                                <path d="M361.293,153.918h59.9l59.9-119.7l-29.9-29.9l-119.8,59.8v59.9l-162.8,162.3l-29.3-29.2l-118,118
-                                    c-24.6,24.6-24.6,64.4,0,89s64.4,24.6,89,0l118-118l-29.9-29.9L361.293,153.918z"/>
+                    <svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+                        <title>call [#190]</title>
+                        <desc>Created with Sketch.</desc>
+                        <defs>
+
+                        </defs>
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g id="Dribbble-Light-Preview" transform="translate(-180.000000, -7319.000000)" fill="#000000">
+                                    <g id="icons" transform="translate(56.000000, 160.000000)">
+                                        <path d="M142.8193,7165.2034 L140.4173,7165.1794 C139.9723,7165.1794 139.7613,7164.6534 140.0763,7164.3384 L143.7073,7160.7074 C144.0973,7160.3164 144.0973,7159.6834 143.7073,7159.2934 C143.3163,7158.9024 142.6833,7158.9024 142.2933,7159.2934 L138.6603,7162.9254 C138.3453,7163.2404 137.7943,7163.0044 137.7953,7162.5594 L137.7893,7160.1734 C137.7893,7159.6214 137.3203,7159.1524 136.7673,7159.1524 C136.2153,7159.1524 135.7763,7159.6074 135.7763,7160.1604 L135.7803,7165.1664 C135.7803,7166.2694 136.6783,7167.1674 137.7823,7167.1674 C138.5613,7167.1724 137.7333,7167.1704 142.7913,7167.1764 C143.3443,7167.1764 143.8013,7166.7374 143.8013,7166.1854 C143.8013,7165.6324 143.3713,7165.2034 142.8193,7165.2034 M138.1163,7174.5784 C137.4223,7174.2044 136.7183,7173.7774 135.9913,7173.4814 C134.5873,7172.9084 134.6823,7174.6014 133.6783,7175.1514 C132.2543,7175.9314 127.6203,7171.4154 127.8293,7170.0144 C127.9913,7168.9304 129.2743,7168.8754 128.9073,7167.5504 C128.7113,7166.8404 128.3603,7166.1414 128.0973,7165.4574 C127.7443,7164.5404 127.6003,7163.9524 126.5723,7164.0034 C125.8313,7164.0394 125.3383,7164.3564 124.8823,7164.9504 C123.6493,7166.5574 123.8353,7168.7254 124.6643,7170.4884 C126.9923,7175.4384 131.7423,7178.6794 135.1573,7178.9874 C136.4533,7179.1044 138.2663,7178.4024 138.7303,7176.9964 C138.6983,7177.0944 138.6663,7177.1884 138.6513,7177.2344 C138.6633,7177.1984 138.6873,7177.1274 138.7303,7176.9954 C138.7773,7176.8544 138.8003,7176.7824 138.8113,7176.7514 C138.7973,7176.7924 138.7653,7176.8904 138.7313,7176.9924 C139.1393,7175.7524 139.1883,7175.1554 138.1163,7174.5784 M138.6513,7177.2344 C138.6393,7177.2704 138.6413,7177.2654 138.6513,7177.2344 M138.8113,7176.7514 C138.8183,7176.7274 138.8193,7176.7254 138.8113,7176.7514" id="call-[#190]">
+
+                        </path>
+                                    </g>
+                                </g>
                             </g>
-                        </g>
                     </svg>
-                    הגדרות
+                    צור קשר
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <svg width="20px" height="20px"
+                         viewBox="0 0 1024 1024"
+                         fill="#000000" class="icon"
+                         version="1.1"
+                         xmlns="http://www.w3.org/2000/svg"><path d="M521.58 516.763v-472.816c250.725 22.642 450.175 222.092 472.817 472.817h-472.816zM918.229 593.091h-435.436c-21.963 0-39.769-17.805-39.769-39.769 0 0 0 0 0 0v-435.463c-222.914 20.121-397.682 207.273-397.682 435.436 0 241.605 195.898 437.452 437.451 437.451 228.163 0 415.339-174.715 435.436-397.657z" />
+                    </svg>
+                    סטטיסטיקה
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                              d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 9C11.7015 9 11.4344 9.12956 11.2497 9.33882C10.8843 9.75289 10.2523 9.79229 9.83827 9.42683C9.4242 9.06136 9.3848 8.42942 9.75026 8.01535C10.2985 7.3942 11.1038 7 12 7C13.6569 7 15 8.34315 15 10C15 11.3072 14.1647 12.4171 13 12.829V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V12.5C11 11.6284 11.6873 11.112 12.2482 10.9692C12.681 10.859 13 10.4655 13 10C13 9.44772 12.5523 9 12 9ZM12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17H12.01C12.5623 17 13.01 16.5523 13.01 16C13.01 15.4477 12.5623 15 12.01 15H12Z"
+                              fill="#323232"/>
+                    </svg>
+                    בקשות
                 </a>
             </li>
             <li>
