BSPMC238-57 Created page of menu of items and connected to the home page

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="home-content">
         <div class="home-card">
-            <a href="">
+            <a href="{% url "menu" %}">
                 <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                          width="50px" height="50px" viewBox="0 0 441.732 441.732"
                          xml:space="preserve">
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="home-card">
-            <a href="{% url "users %}">
+            <a href="{% url "users" %}">
                 <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 29 29" width="50" height="50">
                     <path d="M14.5 2A12.514 12.514 0 0 0 2 14.5 12.521 12.521 0 0 0 14.5 27a12.5 12.5 0 0 0 0-25Zm7.603 19.713a8.48 8.48 0 0 0-15.199.008A10.367 10.367 0 0 1 4 14.5a10.5 10.5 0 0 1 21 0 10.368 10.368 0 0 1-2.897 7.213ZM14.5 7a4.5 4.5 0 1 0 4.5 4.5A4.5 4.5 0 0 0 14.5 7Z"/>
                 </svg>
