--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -79,7 +79,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="{% url "menu" %}">
                     <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                          width="20px" height="20px" viewBox="0 0 441.732 441.732"
                          xml:space="preserve">
