--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -12,7 +12,12 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>Login</title>
 </head>
-<body>
+<script>
+        function toggleZoomScreen() {
+        document.body.style.zoom = (1 / window.devicePixelRatio);
+        }
+    </script>
+<body onload="toggleZoomScreen()" onresize="toggleZoomScreen()">
     <div class="login">
         <div class="login-logo">
             DWH - Sami Shamoon's College Digital Warehouse
