--- a/templates/main.html
+++ b/templates/main.html
@@ -9,17 +9,18 @@
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
         <title>Document</title>
     </head>
-
-    <body>
+    <script>
+        function toggleZoomScreen() {
+        document.body.style.zoom = (1 / window.devicePixelRatio);
+        }
+    </script>
+    <body onload="toggleZoomScreen()" onresize="toggleZoomScreen()">
         {% include "navbar.html" %}
         {% include "sidebar.html" %}
         {% block content %}
         {% endblock content %}
-
         <footer>
             {% include 'footer.html' %}
         </footer>
     </body>
-
-
 </html>
