--- a/static/css/main.css
+++ b/static/css/main.css
@@ -159,7 +159,6 @@ SIDE BAR
     margin: 0;
     padding: 0;
     width: 12rem;
-    min-height: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom right, #ff9900 0%, #ff3399 50%, #33ccff 100%);
     float: right;
@@ -211,9 +210,9 @@ HOME PAGE
     text-decoration: none;
     display: flex;
     justify-content: center;
+    margin: 6% 0;
     font-size: 50px;
     width: 100%;
     height: 100%;
-    margin: 20px;
     color: var(--color-text);
 }
