BSPMC238-104 creation of table of the page

--- a/base/templates/base/asks.html
+++ b/base/templates/base/asks.html
@@ -1,4 +1,14 @@
 {% extends "main.html" %}
 {% block content %}
-
+    <div class="asks-page-user">
+        <table>
+            <tr>
+                <th>שפ פרטי</th>
+                <th>שם משפחה</th>
+                <th>מס' טלפון</th>
+                <th>מאיל</th>
+                <th>תפקיד</th>
+            </tr>
+        </table>
+    </div>
 {% endblock content %}
