--- a/static/css/main.css
+++ b/static/css/main.css
@@ -216,3 +216,17 @@ HOME PAGE
     height: 100%;
     color: var(--color-text);
 }
+
+/*==================
+ASKS PAGE
+==================*/
+
+.asks-page-user {
+    width: 400px;
+    height: 400px;
+    float: right;
+    background-color: #fff;
+    border: 1px solid var(--color-text);
+    border-radius: 10px;
+    margin: 40px 40px 0 0;
+}
