--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,6 +36,28 @@ svg {
     margin: 0 15px 0 0;
 }
 
+table {
+    float: right;
+    border-collapse: collapse;
+    width: 100%;
+    margin: 20px 0;
+}
+th, td {
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #fff;
+
+}
+th {
+    background-color: lightgray;
+}
+
+caption {
+    font-size: 25px;
+    font-weight: 700;
+    margin: 10px;
+}
+
 
 
 /*==================
@@ -221,12 +243,19 @@ HOME PAGE
 ASKS PAGE
 ==================*/
 
-.asks-page-user {
-    width: 400px;
-    height: 400px;
+.asks-page-admin {
+    width: 100em;
+    height: 50em;
     float: right;
     background-color: #fff;
-    border: 1px solid var(--color-text);
     border-radius: 10px;
     margin: 40px 40px 0 0;
+    box-shadow: 0px 4px 8px rgba(202, 202, 202, 0.25);
 }
+
+
+
+/*.table-header {*/
+/*    margin: 10px;*/
+/*}*/
+
