BSPMC238-73 created queues page in html and css

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -56,7 +56,7 @@
             </a>
         </div>
         <div class="home-card">
-            <a href="">
+            <a href="{% url "queues" %}">
                 <svg fill="#000000" xmlns="http://www.w3.org/2000/svg"
                      width="50px" height="50px" viewBox="0 0 80 80" enable-background="new 0 0 100 100" xml:space="preserve">
                     <g>
