--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                 <a href="">
+                 <a href="{% url "queues" %}">
                     <svg fill="#000000" xmlns="http://www.w3.org/2000/svg"
                          width="20px" height="20px" viewBox="0 0 80 80" enable-background="new 0 0 100 100" xml:space="preserve">
                         <g>
