--- a/base/templates/base/users.html
+++ b/base/templates/base/users.html
@@ -13,7 +13,7 @@
                     <th>כמות עבירות</th>
                     <th>כמות פריטים שהשאיל</th>
                     <th>תפקיד</th>
-                    <th>מאיל</th>
+                    <th>מייל</th>
                     <th>מס' טלפון</th>
                     <th>שם משפחה</th>
                     <th>שפ פרטי</th>
