--- a/base/templates/base/asks.html
+++ b/base/templates/base/asks.html
@@ -13,7 +13,7 @@
                     <th>תאריך החזרה</th>
                     <th>תאריך ההשאלה</th>
                     <th>תפקיד</th>
-                    <th>מאיל</th>
+                    <th>מייל</th>
                     <th>מס' טלפון</th>
                     <th>שם של פריט</th>
                     <th>מקט של פריט</th>
