--- a/base/templates/base/special_asks.html
+++ b/base/templates/base/special_asks.html
@@ -12,7 +12,7 @@
                 <tr>
                     <th>בקשה</th>
                     <th>תפקיד</th>
-                    <th>מאיל</th>
+                    <th>מייל</th>
                     <th>מס' טלפון</th>
                     <th>שם משפחה</th>
                     <th>שפ פרטי</th>
