moving pop-up messages to separate file

--- a/base/templates/base/login/main.html
+++ b/base/templates/base/login/main.html
@@ -15,17 +15,7 @@
             <div class="login-title">{{ PROJECT_NAME }}</div>
             {% block content %}
             {% endblock content %}
-            {% if messages %}
-                <div>
-                    <ul class="messages">
-                        {% for message in messages %}
-                            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-                                {{ message }}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            {% endif %}
+            {% include "base/messages.html" %}
         </div>
     </body>
     <footer>
