--- a/templates/main.html
+++ b/templates/main.html
@@ -1,22 +1,25 @@
 <!doctype html>
 {% load static %}
-<html lang="en">
+<html lang="he">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
-        <title>Document</title>
+        <title>
+            {% block title %}
+                {{ PROJECT_NAME }}
+            {% endblock title %}
+        </title>
     </head>
-    <body>
+    <script src="{% static 'js/scripts.js' %}"></script>
+    <body onload="toggleZoomScreen()" onresize="toggleZoomScreen()">
         {% include "navbar.html" %}
         {% block content %}
         {% endblock content %}
-
+        <footer>
+            {% include "footer.html" %}
+        </footer>
     </body>
-
-    <footer>
-        {% include 'footer.html' %}
-    </footer>
 </html>
