--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,6 @@
-<!--Footer-->
-{% load static %}
-
-<div id="rights">
-    All rights reserved &copy; 2023
-</div>
-
 <div id="about">
-    <a href="" title="about" target="_blank">About us</a>
+    <a href="#" title="About Us">אודות</a>
 </div>
-
-
+<div class="container">
+    &copy; {{ CURRENT_YEAR }} {{ PROJECT_NAME }}. All Rights Reserved.
+</div>
