BSPMC238-106 created and fixed statistic page in html and css

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -91,7 +91,7 @@
             </a>
         </div>
         <div class="home-card">
-            <a href="">
+            <a href="{% url "stat" %}">
                 <svg width="50px" height="50px"
                      viewBox="0 0 1024 1024"
                      fill="#000000" class="icon"
