--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="{% url "stat" %}">
                     <svg width="20px" height="20px"
                          viewBox="0 0 1024 1024"
                          fill="#000000" class="icon"
