--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -102,7 +102,7 @@
             </a>
         </div>
         <div class="home-card">
-            <a href=" {% url "home" %}">
+            <a href=" {% url "connections" %}">
                 <svg width="50px" height="50px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <title>call [#190]</title>
                     <desc>Created with Sketch.</desc>
