--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
 
         <ul class="navigation">
             <li>
-                <a href="">
+                <a href="{% url "connections" %}">
                     <svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 
                         <title>call [#190]</title>
