added initial reset_password front and back

--- a/base/templates/base/login/login.html
+++ b/base/templates/base/login/login.html
@@ -10,7 +10,7 @@
             <input type="submit" value="כניסה"/>
             <button type="button"
                     class="btn"
-                    onclick="location.href='{% url 'change_password' %}'">שכחתי סיסמה</button>
+                    onclick="location.href='{% url 'reset_password' %}'">שכחתי סיסמה</button>
         </form>
     </div>
 {% endblock content %}
