--- a/static/css/main.css
+++ b/static/css/main.css
@@ -290,15 +290,15 @@ HOME PAGE
 }
 
 /*==================
-ASKS PAGE
+REQUESTS PAGE | BORROWINGS PAGE | SPECIAL REQUESTS PAGE
 ==================*/
 
 
-.asks-page-admin,
-.queues-page-admin,
+.borrowings-page-admin,
+.requests-page-admin,
 .user-list,
-.specialAsks-page-admin,
-.connections-page{
+.special_requests-page-admin,
+.contact_us-page{
     width: 100em;
     height: 50em;
     float: right;
@@ -369,7 +369,7 @@ PERSONAL INFO PAGE
 /*==================
 STATISTICS PAGE
 ==================*/
-.statistic-page {
+.statistics-page {
     justify-content: center;
     display: grid;
     margin: 50px;
@@ -377,7 +377,7 @@ STATISTICS PAGE
 }
 
 
-.statistic-card {
+.statistics-card {
     background-color: #fff;
     margin: 20px;
     border-radius: 10px;
@@ -388,13 +388,13 @@ STATISTICS PAGE
 }
 
 /*==================
-CONNECTIONS PAGE
+CONTACT_US PAGE
 ==================*/
-.connections-page h2 {
+.contact_us-page h2 {
     direction: rtl;
     text-align: center;
 }
-.connections-card {
+.contact_us-card {
     font-size: 30px;
     font-weight: 700;
     color: var(--color-text);
@@ -402,14 +402,14 @@ CONNECTIONS PAGE
     direction: rtl;
 }
 
-.connections-card a {
+.contact_us-card a {
     text-decoration: none;
     width: 100%;
     height: 100%;
     color: var(--color-text);
 }
 
-.connections-card a:hover {
+.contact_us-card a:hover {
     background-color: #33ccff;
     color: #fff;
     border-radius: 10px;
