--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
 
         <ul class="navigation">
             <li>
-                <a href="{% url "connections" %}">
+                <a href="{% url "contact_us" %}">
                     <svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 
                         <title>call [#190]</title>
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% url "stat" %}">
+                <a href="{% url "statistics" %}">
                     <svg width="20px" height="20px"
                          viewBox="0 0 1024 1024"
                          fill="#000000" class="icon"
@@ -44,7 +44,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% url "special_asks" %}">
+                <a href="{% url "special_requests" %}">
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                               d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 9C11.7015 9 11.4344 9.12956 11.2497 9.33882C10.8843 9.75289 10.2523 9.79229 9.83827 9.42683C9.4242 9.06136 9.3848 8.42942 9.75026 8.01535C10.2985 7.3942 11.1038 7 12 7C13.6569 7 15 8.34315 15 10C15 11.3072 14.1647 12.4171 13 12.829V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V12.5C11 11.6284 11.6873 11.112 12.2482 10.9692C12.681 10.859 13 10.4655 13 10C13 9.44772 12.5523 9 12 9ZM12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17H12.01C12.5623 17 13.01 16.5523 13.01 16C13.01 15.4477 12.5623 15 12.01 15H12Z"
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                 <a href="{% url "queues" %}">
+                 <a href="{% url "requests" %}">
                     <svg fill="#000000" xmlns="http://www.w3.org/2000/svg"
                          width="20px" height="20px" viewBox="0 0 80 80" enable-background="new 0 0 100 100" xml:space="preserve">
                         <g>
@@ -79,7 +79,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% url "menu" %}">
+                <a href="{% url "catalog" %}">
                     <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                          width="20px" height="20px" viewBox="0 0 441.732 441.732"
                          xml:space="preserve">
@@ -114,7 +114,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% url "asks" %}">
+                <a href="{% url "borrowings" %}">
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="5" y="4" width="14" height="17" rx="2" stroke="#222222"/>
                         <path d="M9 9H15" stroke="#222222" stroke-linecap="round"/>
