--- a/base/templates/base/borrowings.html
+++ b/base/templates/base/borrowings.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-    <div class="asks-page-admin">
+    <div class="borrowings-page-admin">
         <table>
             <caption>
                 מידע על ההאשלות של סטודנטים\מרצים
