--- a/base/templates/base/requests.html
+++ b/base/templates/base/requests.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-     <div class="queues-page-admin">
+     <div class="requests-page-admin">
         <table>
             <caption>
                 מידע על התורים להשאלות
