--- a/base/templates/base/special_requests.html
+++ b/base/templates/base/special_requests.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-     <div class="specialAsks-page-admin">
+     <div class="special_requests-page-admin">
         <table>
             <caption>
                 מידע על בקשות מיוחדות
