--- a/base/templates/base/statistics.html
+++ b/base/templates/base/statistics.html
@@ -1,24 +1,24 @@
 {% extends "main.html" %}
 {% block content %}
     <h1>סטטיסטיקה</h1>
-    <div class="statistic-page">
-        <div class="statistic-card">
+    <div class="statistics-page">
+        <div class="statistics-card">
             <p>סה"כ השאלות</p>
             <p>500</p>
         </div>
-        <div class="statistic-card">
+        <div class="statistics-card">
             <p>סה"כ תורים</p>
             <p>1000</p>
         </div>
-        <div class="statistic-card">
+        <div class="statistics-card">
             <p>סה"כ פריטים באתר</p>
             <p>200</p>
         </div>
-        <div class="statistic-card">
+        <div class="statistics-card">
             <p>סה"כ משתמשים</p>
             <p>400</p>
         </div>
-        <div class="statistic-card">
+        <div class="statistics-card">
             <p>סה"כ בקשות</p>
             <p>800</p>
         </div>
