minor fixes in templates

--- a/base/templates/base/reset_password/main.html
+++ b/base/templates/base/reset_password/main.html
@@ -16,6 +16,7 @@
             {% include "base/messages.html" %}
             {% block content %}
             {% endblock content %}
+            {% include "base/messages.html" %}
         </div>
     </body>
     <footer>
