--- a/base/templates/base/reset_password/reset_password_sent.html
+++ b/base/templates/base/reset_password/reset_password_sent.html
@@ -7,6 +7,6 @@
         <br>
         <p>המייל נשלח</p>
         <p>ההנחיות לשיחזור הסיסמה נשלחו למייל שציינת</p>
-        <p>אם אינך רואה את המכתב נא לבדוק בתיבת זבל</p>
+        <p>אם אינך רואה את המכתב נא לבדוק בספאם</p>
     </div>
 {% endblock content %}
