changed method detecting the first user's login
- changes in forms.py: added is_first_login attribute to the User model
- changes in seed.py: added is_first_login=False when creating superuser
- minor fixes in set_password.html
- changes in views: changed the logic that detects the first user's login

--- a/base/templates/base/login/set_password.html
+++ b/base/templates/base/login/set_password.html
@@ -1,2 +1,4 @@
 {% extends "base/login/main.html" %}
-{% include "base/change_password.html" %}
+    {% block content %}
+        {% include "base/change_password.html" %}
+    {% endblock content %}
