--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,9 @@
 
         <ul class="navigation">
             {% include "base/navbar_buttons/contact_us_button.html" %}
-            {% include "base/navbar_buttons/statistics_button.html" %}
+            {% if user_type == "admin" or user_type == "moderator" %}
+                {% include "base/navbar_buttons/statistics_button.html" %}
+            {% endif %}
             {% include "base/navbar_buttons/special_requests_button.html" %}
             {% include "base/navbar_buttons/requests_button.html" %}
             {% if user_type == "admin" %}
