--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -23,4 +23,8 @@
     <li class="side-bar-link">
         <a href="">מתאמים</a>
     </li>
+
+    <li class="new-cat">
+        <a href="{% url "add_category" %}">קטגוריה חדשה</a>
+    </li>
 </ul>
