--- a/templates/main.html
+++ b/templates/main.html
@@ -7,13 +7,14 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <title>
             {% block title %}
                 {{ PROJECT_NAME }}
             {% endblock title %}
         </title>
     </head>
-    <script src="{% static 'js/scripts.js' %}"></script>
     <body onload="toggleZoomScreen()" onresize="toggleZoomScreen()">
         {% include "navbar.html" %}
         {% include "sidebar.html" %}
@@ -22,5 +23,6 @@
         <footer>
             {% include "footer.html" %}
         </footer>
+        <script src="{% static 'js/scripts.js' %}"></script>
     </body>
 </html>
